fix canvas size and positioning on mobile; reduce fftSize if base > 110

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     color: #fff;
     background: #010101;
@@ -146,6 +150,10 @@ label {
 label>strong {
     font-weight: 500;
     color: oklch(0.9 0.16 80);
+}
+
+label>small {
+    cursor: pointer;
 }
 
 strong.cyan {
